Fix product creation error and improve color contrast for better readability

--- a/frontend/src/quasar-variables.sass
+++ b/frontend/src/quasar-variables.sass
@@ -3,7 +3,20 @@ $secondary : #26A69A
 $accent    : #9C27B0
 
 $dark      : #1D1D1D
+$dark-page : #121212
 $positive  : #21BA45
 $negative  : #C10015
 $info      : #31CCEC
 $warning   : #F2C037
+
+// Better contrast colors
+$grey-1    : #FAFAFA
+$grey-2    : #F5F5F5
+$grey-3    : #EEEEEE
+$grey-4    : #E0E0E0
+$grey-5    : #BDBDBD
+$grey-6    : #9E9E9E
+$grey-7    : #757575
+$grey-8    : #616161
+$grey-9    : #424242
+$grey-10   : #212121
